# influxdb-write-to-postgresql

./: .gitignore  Dockerfile  LICENSE.MIT  README.md  build-docker.sh  config.example.yaml  config.minimal.yaml  dune-project  influxdb_write_to_postgresql.opam
doc/: config.example.yaml  config.minimal.yaml
lib/: auth.ml  auth.mli  cmdargs.ml  common.ml  config.ml  config.mli  db_quoted.ml  db_quoted.mli  db_spool.ml  db_spool.mli  db_writer.ml  db_writer.mli  dune  influxdb_lexer.ml  influxdb_lexer.mli  iw2pg.ml  iw2pg.mli  lexer.ml  logging.ml  logging.mli  request_write.ml  request_write.mli  requests.ml  sedlex_menhir.ml  sql.ml  sql_lexer.ml  sql_parser.mly  sql_types.ml
main/: dune  iw2pg.ml
test/: dune  test.ml  test_auth.ml  test_config.ml  test_db_spool.ml  test_db_writer.ml  test_influxdb_lexer.ml  test_iw2pg.ml  test_lexer.ml  test_sql.ml  test_utils.ml
